-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 11, 12, 13, 14
-
Component/s: hotspot
-
Environment:
Linux fa9139f18809 4.9.184-linuxkit #1 SMP Tue Jul 2 22:58:16 UTC 2019 x86_64 x86_64 x86_64 GNU/Linux
-
b13
-
generic
-
generic
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8241431 | 13.0.3 | Xin Liu | P2 | Resolved | Fixed | b01 |
| JDK-8231165 | 11.0.6-oracle | Xin Liu | P2 | Closed | Fixed | b01 |
| JDK-8230667 | 11.0.6 | Xin Liu | P2 | Resolved | Fixed | b01 |
openjdk 11 2018-09-25
OpenJDK Runtime Environment (slowdebug build 11+28)
OpenJDK 64-Bit Server VM (slowdebug build 11+28, mixed mode)
#0 0x00007ffff741e760 in raise () from /lib64/libc.so.6
#1 0x00007ffff741fd41 in abort () from /lib64/libc.so.6
#2 0x00007ffff63f60d5 in os::abort (dump_core=true, siginfo=0x0, context=0x0) at /local/home/xxinliu/ws-openjdk11/src/OpenJDK11Src/src/src/hotspot/os/linux/os_linux.cpp:1411
#3 0x00007ffff6668b39 in VMError::report_and_die (id=-536870912, message=0x7ffff6b324fe "assert(found_sfpt) failed", detail_fmt=0x7ffff6b324d0 "no node in loop that's not input to safepoint", detail_args=0x7fffd0aa1310, thread=0x7ffff01cd000, pc=0x0, siginfo=0x0, context=0x0,
filename=0x7ffff6b31bd8 "/local/home/xxinliu/ws-openjdk11/src/OpenJDK11Src/src/src/hotspot/share/opto/loopnode.cpp", lineno=950, size=0) at /local/home/xxinliu/ws-openjdk11/src/OpenJDK11Src/src/src/hotspot/share/utilities/vmError.cpp:1541
#4 0x00007ffff6667ee3 in VMError::report_and_die (thread=0x7ffff01cd000, context=0x0, filename=0x7ffff6b31bd8 "/local/home/xxinliu/ws-openjdk11/src/OpenJDK11Src/src/src/hotspot/share/opto/loopnode.cpp", lineno=950, message=0x7ffff6b324fe "assert(found_sfpt) failed",
detail_fmt=0x7ffff6b324d0 "no node in loop that's not input to safepoint", detail_args=0x7fffd0aa1310) at /local/home/xxinliu/ws-openjdk11/src/OpenJDK11Src/src/src/hotspot/share/utilities/vmError.cpp:1266
#5 0x00007ffff5cd6c3f in report_vm_error (file=0x7ffff6b31bd8 "/local/home/xxinliu/ws-openjdk11/src/OpenJDK11Src/src/src/hotspot/share/opto/loopnode.cpp", line=950, error_msg=0x7ffff6b324fe "assert(found_sfpt) failed", detail_fmt=0x7ffff6b324d0 "no node in loop that's not input to safepoint")
at /local/home/xxinliu/ws-openjdk11/src/OpenJDK11Src/src/src/hotspot/share/utilities/debug.cpp:231
#6 0x00007ffff6253945 in LoopNode::verify_strip_mined (this=0x7fffb010f720, expect_skeleton=-1) at /local/home/xxinliu/ws-openjdk11/src/OpenJDK11Src/src/src/hotspot/share/opto/loopnode.cpp:950
#7 0x00007ffff6254fce in CountedLoopNode::skip_strip_mined (this=0x7fffb010f720, expect_skeleton=-1) at /local/home/xxinliu/ws-openjdk11/src/OpenJDK11Src/src/src/hotspot/share/opto/loopnode.cpp:1197
#8 0x00007ffff625aa83 in IdealLoopTree::dump_head (this=0x7fffb01256a0) at /local/home/xxinliu/ws-openjdk11/src/OpenJDK11Src/src/src/hotspot/share/opto/loopnode.cpp:2403
#9 0x00007ffff625b128 in IdealLoopTree::dump (this=0x7fffb01256a0) at /local/home/xxinliu/ws-openjdk11/src/OpenJDK11Src/src/src/hotspot/share/opto/loopnode.cpp:2470
#10 0x00007ffff625b145 in IdealLoopTree::dump (this=0x7fffb0125770) at /local/home/xxinliu/ws-openjdk11/src/OpenJDK11Src/src/src/hotspot/share/opto/loopnode.cpp:2471
#11 0x00007ffff625b145 in IdealLoopTree::dump (this=0x7fffb0123f90) at /local/home/xxinliu/ws-openjdk11/src/OpenJDK11Src/src/src/hotspot/share/opto/loopnode.cpp:2471
#12 0x00007ffff625ca05 in PhaseIdealLoop::build_and_optimize (this=0x7fffd0aa34b0, do_split_ifs=false, skip_loop_opts=false, last_round=false) at /local/home/xxinliu/ws-openjdk11/src/OpenJDK11Src/src/src/hotspot/share/opto/loopnode.cpp:2861
#13 0x00007ffff5c464b4 in PhaseIdealLoop::PhaseIdealLoop (this=0x7fffd0aa34b0, igvn=..., do_split_ifs=false, skip_loop_opts=false, last_round=false) at /local/home/xxinliu/ws-openjdk11/src/OpenJDK11Src/src/src/hotspot/share/opto/loopnode.hpp:945
#14 0x00007ffff5c39967 in Compile::Optimize (this=0x7fffd0aa5a60) at /local/home/xxinliu/ws-openjdk11/src/OpenJDK11Src/src/src/hotspot/share/opto/compile.cpp:2291
#15 0x00007ffff5c32bb6 in Compile::Compile (this=0x7fffd0aa5a60, ci_env=0x7fffd0aa6730, compiler=0x7ffff01cc5f0, target=0x7fffb00561f0, osr_bci=-1, subsume_loads=true, do_escape_analysis=true, eliminate_boxing=true, directive=0x7ffff0108660)
at /local/home/xxinliu/ws-openjdk11/src/OpenJDK11Src/src/src/hotspot/share/opto/compile.cpp:868
#16 0x00007ffff5aef1f3 in C2Compiler::compile_method (this=0x7ffff01cc5f0, env=0x7fffd0aa6730, target=0x7fffb00561f0, entry_bci=-1, directive=0x7ffff0108660) at /local/home/xxinliu/ws-openjdk11/src/OpenJDK11Src/src/src/hotspot/share/opto/c2compiler.cpp:109
#17 0x00007ffff5c4f21d in CompileBroker::invoke_compiler_on_method (task=0x7ffff02fc590) at /local/home/xxinliu/ws-openjdk11/src/OpenJDK11Src/src/src/hotspot/share/compiler/compileBroker.cpp:2108
#18 0x00007ffff5c4e158 in CompileBroker::compiler_thread_loop () at /local/home/xxinliu/ws-openjdk11/src/OpenJDK11Src/src/src/hotspot/share/compiler/compileBroker.cpp:1808
#19 0x00007ffff65ea664 in compiler_thread_entry (thread=0x7ffff01cd000, __the_thread__=0x7ffff01cd000) at /local/home/xxinliu/ws-openjdk11/src/OpenJDK11Src/src/src/hotspot/share/runtime/thread.cpp:3273
#20 0x00007ffff65e5467 in JavaThread::thread_main_inner (this=0x7ffff01cd000) at /local/home/xxinliu/ws-openjdk11/src/OpenJDK11Src/src/src/hotspot/share/runtime/thread.cpp:1752
#21 0x00007ffff65e52d9 in JavaThread::run (this=0x7ffff01cd000) at /local/home/xxinliu/ws-openjdk11/src/OpenJDK11Src/src/src/hotspot/share/runtime/thread.cpp:1732
#22 0x00007ffff63f4815 in thread_native_entry (thread=0x7ffff01cd000) at /local/home/xxinliu/ws-openjdk11/src/OpenJDK11Src/src/src/hotspot/os/linux/os_linux.cpp:698
#23 0x00007ffff79ab54b in start_thread () from /lib64/libpthread.so.0
#24 0x00007ffff74df2ff in clone () from /lib64/libc.so.6
(gdb) !./bin/java --version
openjdk 11 2018-09-25
OpenJDK Runtime Environment (slowdebug build 11+28)
OpenJDK 64-Bit Server VM (slowdebug build 11+28, mixed mode)
reproducer:
./bin/java -cp /ion-java-1.5.0.jar -XX:+ReplayCompiles -XX:ReplayDataFile=/replay_simplied.log -XX:+ReplayIgnoreInitErrors -XX:+TraceLoopOpts
- backported by
-
JDK-8230667 C2 compilation fails with assert(found_sfpt) failed: no node in loop that's not input to safepoint
-
- Resolved
-
-
JDK-8241431 C2 compilation fails with assert(found_sfpt) failed: no node in loop that's not input to safepoint
-
- Resolved
-
-
JDK-8231165 C2 compilation fails with assert(found_sfpt) failed: no node in loop that's not input to safepoint
-
- Closed
-
- relates to
-
JDK-8186027 C2: loop strip mining
-
- Resolved
-
-
JDK-8229483 Sinking load out of loop may trigger: assert(found_sfpt) failed: no node in loop that's not input to safepoint
-
- Resolved
-