8229450: C2 compilation fails with assert(found_sfpt) failed

Reviewed-by: roland, thartmann